Fix some app layout issues

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -35,6 +35,9 @@ body
   margin: 0
   padding: 0
   
+.hidden
+  display: none
+  
 .wrapper
   flex: 1 0 auto
 
@@ -177,6 +180,7 @@ footer
 .output-container
   font-size: 2rem
   line-height: 1.34375rem
+  position: relative
   .output-container__field
     display: flex
 
@@ -193,6 +197,8 @@ footer
   flex-wrap: wrap
   // justify-content: space-evenly
   align-content: stretch
+  &.hidden
+    display: none
   .key
     box-sizing: border-box
     width: calc(100vw/3)
@@ -203,7 +209,7 @@ footer
     text-align: center
     line-height: 4rem
 
-input, button
+input, button, .result
   background: dark-color
   font-size: 2rem
   font-family: noto-light
@@ -212,13 +218,14 @@ input, button
   color: light-color
   box-sizing: border-box
     
-input
+input, .result
   height: 100%
   width: calc(100vw - 100vw/3)
   border: none
-  user-select: none
   outline: none
   line-height: 4rem
+  padding: 0 1rem
+  text-align: right
   
 button
   height: 100%
@@ -229,16 +236,23 @@ button
   border-bottom: none
   
 .output-container__error
-  background: darken(light-color, 85%)
+  width: 100%
   height: calc( (100vh - 8rem)/4 )
   max-height: 4rem
+  position: absolute
+  top: 0.05rem
+  background: darken(light-color, 85%)
   display: flex
-  align-content: center
+  align-items: center
+  justify-content: center
+  &.hidden
+    display: none
   & p
     font-size: 1rem
     line-height: 1.375rem
     text-align: center
     color: light-color
+    margin: 0
   
 /* Media Queries */
 
